	encoding/decoding, but even faster for stringshare encoding.

	* Improve speed when decoding mostly array with eet_data_read.

2010-12-03  Cedric BAIL

	* Improve portability.

2010-12-07  Carsten Haitzler (The Rasterman)

	* Move raw function pointer defs to typedefs in public API for
        readability improvements.

2011-01-29  Carsten Haitzler (The Rasterman)

	 * 1.4.0 release

2011-01-29  Vincent Torri

	* Use eina_stringshare_add() instead of strdup() on mmaped file names
	on Windows. This fix eet shut down on Windows.

2011-02-14  Cedric BAIL

	* Improve Eet_Data to make decoding of EET_G_UNION and EET_G_*ARRAY
	faster and less memory heavy.

2011-05-14  Cedric BAIL

	* Use Eina_Lock.
	* Sync GNUTLS initialisation with Eina.

2011-05-17  Cedric BAIL

	* Use Eina_File.
	* Fix test forgetting to initialize eet.

2011-05-23  Vincent Torri

	* Fix compilation with libjpeg 8 on Windows.

2011-06-10  Cedric BAIL

	* Add EET_DATA_DESCRIPTOR_ADD_LIST_STRING helper to define List of char *.

2011-07-04  Mike Blumenkrantz

        * Add functions to manipulate nodes:
            eet_node_children_get, eet_node_next_get, eet_node_parent_get,
            eet_node_type_get, eet_node_value_get, eet_node_name_get
        * Fix segmentation faults in several eet_node functions

2011-07-16  Vincent Torri

	* On Windows, open() in text mode followed by fdopen() in
	binary mode does not create a stream in binary mode.
	So add O_BINARY to open().

2011-07-29  Mike Blumenkrantz

        * Add eet_alias_get to return the destination name of an alias

2011-09-15  Cedric Bail

	* Add eet_data_xattr_cipher_get and eet_data_xattr_cipher_set.

2011-10-04  Carsten Haitzler (The Rasterman)

	* Fix issue where an empty eet file (no keys) is not openable
        for read/write anymore. Allow it.

2011-10-28  David Seikel (onefang)

	* Added a new macro for adding arrays of basic types.
	   EET_DATA_DESCRIPTOR_ADD_BASIC_ARRAY